cmake_minimum_required(VERSION 2.4.6)

# generating the python module with swig
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")
set(CMAKE_SWIG_OUTDIR ${PROJECT_SOURCE_DIR}/bin)
SET_SOURCE_FILES_PROPERTIES(ORBextractor.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(ORBextractor python ORBextractor.i ../src/ORBextractor.cc)
SWIG_LINK_LIBRARIES(ORBextractor ${PYTHON_LIBRARIES} ${OpenCV_LIBS})

